# HierarchyT

./: CMakeLists.txt  README.md  main.cpp  test_all.h
src/: Benchmarks.cpp  Benchmarks.h  Layer.cpp  Layer.h  Vector.h  main.cpp
tests/: compute.cpp  compute.h  grow.cpp  grow.h  layer.cpp  layer.h  morph.h  shrink.cpp  shrink.h  test_graphs.h
